samples/_failures_safe/1761040588_4caf3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19cd249b.c: In function ‘main’:
./samples/SAFE/__tmp_19cd249b.c:160: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_19cd249b.c:159:5: error: expected declaration or statement at end of input
  159 |     if
      |     ^~
